Update main README

--- a/README
+++ b/README
@@ -3,12 +3,18 @@ Author:	 David Zemon
 Purpose: Generic C library files for the Parallax Propeller Microcontroller
 
 TODO:
-	- Finish SD routine
+	- SD & FAT16/32 driver
+		- Write files
+			- Write blocks (low level SD)
+		- Traverse directories (implies ability to open files/directories not
+		  in the current directory)
 	- Created shared library file(s)
+		- ***Likely not going to happen: pre-compiled files implies an
+		  inability to have pre-processor optimizations
 	- Re-create SPI library to use inline assembly and FCACHE instead of
 	  a second cog
 	- Add "SPIShiftOut_Fast" and "SPIShiftIn_Fast" functions that do not use
-	  a delay in for the clock - useful for SD card read
+	  a delay in for the clock - useful for SD card read/write
 	- Add "SPIShiftIn_Multi", which will repeatedly shift in values and allow
 	  for the selection between *_Fast or normal using a parameter
 
