--- a/PropGCC_Demos/SD/README
+++ b/PropGCC_Demos/SD/README
@@ -8,6 +8,7 @@
 As of 4/19/2013, SD demo requires the following code space:
 Enabled Code Options						CMM Mode		LMM Mode
 None										7124			11340
+__simple_printf only						9412			15504
 SD_DEBUG									10480			17048
 SD_DEBUG, SD_VERBOSE						17492			29628
 SD_DEBUG, SD_VERBOSE, SD_VERBOSE_BLOCKS		17816			30196
