--- a/PropGCC_Demos/SD/README
+++ b/PropGCC_Demos/SD/README
@@ -5,16 +5,16 @@
 ###############################
 
 ### CODE SPACE ###
-As of 4/19/2013, SD demo requires the following code space:
+As of 4/22/2013, SD demo requires the following code space:
 Enabled Code Options						CMM Mode		LMM Mode
-None										7124			11340
-__simple_printf only						9412			15504
-SD_DEBUG									10480			17048
-SD_DEBUG, SD_VERBOSE						17492			29628
-SD_DEBUG, SD_VERBOSE, SD_VERBOSE_BLOCKS		17816			30196
-SD_DEBUG, SD_SHELL							15708			27508
-SD_SHELL									14624			25904
-All											19220			Overflowed by 1760
+None										7872			12920
+__simple_printf only						10344			17288
+SD_DEBUG									11284			18704
+SD_DEBUG, SD_VERBOSE						17996			30576
+SD_DEBUG, SD_VERBOSE, SD_VERBOSE_BLOCKS		18308			Overflowed by 112
+SD_DEBUG, SD_SHELL							12464			20996
+SD_SHELL									11320			19316
+All											19700			Overflowed by 2672
 
 ### NOTE ###
 To compile this demo, you must either copy into the working directory or 
