--- a/PropGCC_Demos/SD/README
+++ b/PropGCC_Demos/SD/README
@@ -25,3 +25,5 @@ create symbolic links to the following files:
 	- sd.c
 	- sd.h		(see note in common.mk for reasoning why this must be included)
 
+### TODO ###
+	- 
